# practice_battle_saga

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/practice_battle_saga/: __init__.py
src/task_1_fight/: main.py  task.md
src/task_1_fight/tests/: test_task.py
src/task_2_army/: main.py  task.md
src/task_2_army/tests/: test_task.py
src/task_3_defender/: main.py  task.md
src/task_3_defender/tests/: test_task.py
src/task_4_vampire/: main.py  task.md
src/task_4_vampire/tests/: test_task.py
